<resources>
    <string name="app_name">Spring Practice</string>
    <string name="login">Email</string>
    <string name="password">Пароль</string>
    <string name="log_in">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="to_sign_up">Еще нет аккаунта? Зарегистрироваться</string>
    <string name="to_login">Уже есть аккаунт? Войти</string>
    <string name="verify_email">Подтвердите адрес в письме, отправленном на Вашу электронную почту.</string>
    <string name="enter_code">Введите код</string>
    <string name="verify">Готово</string>
    <string name="send_again">Отправить повторно</string>
    <string name="check_amp_point">Check&amp;Point</string>
    <string name="check_password">Подтвердите пароль</string>
    <string name="skip">Пропустить</string>
    <string name="sign_out">выйти</string>
    <string name="sample_text">Sample Text</string>
    <string name="profile_title">Профиль</string>
    <string name="collections_title">Коллекции</string>
    <string name="map_fragment_label">Карта</string>
    <string name="firstName">Имя</string>
    <string name="lastName">Фамилия</string>
    <string name="nickname">Никнейм</string>
    <string name="email_error">Введите корректный Email</string>
    <string name="password_error">Пароль должен состоять из 6 символов, иметь одну букву и одну цифру</string>
    <string name="first_name_error">Имя должно содержать от 2 до 15 символов и не иметь цифр</string>
    <string name="last_name_error">Фамилия должна содержать от 2 до 15 символов и не иметь цифр</string>
    <string name="nickname_error">Никнейм должен содержать от 2 до 15 символов</string>
    <string name="check_password_error">Пароли не совпадают</string>
    <string name="sign_up_error">Ошибка регистрации</string>
    <string name="nickname_exists">Никнейм уже существует</string>
    <string name="email_exists">Пользователь с таким Email уже существует</string>
    <string name="operation_not_allowed">Операция недоступна</string>
    <string name="too_many_attempts">Слишком много попыток, попробуйте позже</string>
    <string name="internet_error">Проверьте подключение к интернету</string>
    <string name="place_info_not_found">Информация о месте не найдена</string>
    <string name="review_was_added_success">Отзыв был успешно опубликован</string>
    <string name="review_was_added_failure">Отзыв не был опубликован. Попробуйте снова</string>
    <string name="empty_reviews">Отзывов пока нет</string>
    <string name="failure_get_reviews">Ошибка! Отзывы не найдены</string>
    <string name="search_will_be_available">Скоро будет доступен поиск мест</string>
    <string name="сheck_test">Проверьте</string>
    <string name="try_again_error">Возникла ошибка! Повторите еще раз</string>
    <string name="place_not_found_error">Ошибка! Место не найдено</string>
    <string name="info_not_found">Информация не найдена!</string>
    <string name="friends_opinion">Мнение ваших друзей:</string>
    <string name="leave_review">Оставить отзыв</string>
    <string name="dd_yyyy">DD месяц YYYY</string>
    <string name="comment">Комментарий:</string>
    <string name="your_rating">Оцените это место:</string>
    <string name="your_review">Ваш отзыв</string>
    <string name="no_reviews">Отзывов пока нет! Будьте первым</string>
    <string name="address">Адрес</string>
    <string name="hours">xx:xx - xx:xx</string>
    <string name="open">Открыто</string>
    <string name="number">+7900000000</string>
    <string name="place">Place</string>
    <string name="category">Category</string>
    <string name="closed">Закрыто</string>
    <string name="try_again">Ошибка! Повторите еще раз</string>
    <string name="full_name">Имя Фамилия</string>
    <string name="friends">Подписки</string>
    <string name="zero_friends">Пора на кого-нибудь подписаться</string>
    <string name="add_friend">Подписаться</string>
    <string name="friend_nickname">Никнейм</string>
    <string name="not_found">Информация не найдена</string>
    <string name="enter_place">Введите место</string>
    <string name="search_places">Поиск доступных мест</string>
    <string name="find">Найти</string>
    <string name="cancel">Закрыть</string>
    <string name="place_no_found">Место не найдено</string>
    <string name="fail_place_found">Ошибка! Места не найдены</string>
    <string name="favourites">Избранное</string>
    <string name="change_avatar">Изменить фотографию</string>
    <string name="no_friends">У пользователя нет подписок</string>
    <string name="reviews">Отзывы</string>
    <string name="collections">Коллекции</string>
    <string name="place_name">Название</string>
    <string name="list_empty">Список мест пуст</string>
    <string name="favourites_not_found">Закладки не найдены</string>
    <string name="no_reviews_user">Отзывов нет</string>
</resources>
