<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/profile_title" />
        <item
            android:id="@+id/friendsFragment"
            android:icon="@drawable/ic_baseline_people_24"
            android:title="@string/friends" />
        <item
            android:id="@+id/reviewsFragment"
            android:icon="@drawable/ic_baseline_library_books_24"
            android:title="@string/reviews" />
        <item
            android:id="@+id/favouritesFragment"
            android:icon="@drawable/ic_baseline_bookmark_24"
            android:title="@string/favourites" />
    </group>
</menu>
